Refactor backend helpers and split seller product form